# ksnakeduel

./: .flatpak-manifest.json  .kdbgrc.ktron  .kde-ci.yml  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Messages.sh  README  TODO  ai.ui  appearance.ui  fontutils.cpp  general.ui  intelligence.cpp  intelligence.h  item.cpp  item.h  kdesnake.cmake  kdesnake.desktop  ksnakeduel.categories  ksnakeduel.desktop  ksnakeduel.kcfg  ksnakeduel.knsrc  ksnakeduel_debug.cpp  ksnakeduel_debug.h  ksnakeduelui.rc  ktoptdlg.cpp  ktoptdlg.h  ktron.cpp  ktron.desktop  ktron.h  ktron.kcfg  ktron.kdelnk  ktron.knsrc  ktron.xpm  ktronui.rc  main.cpp  mini-ktron.xpm  object.cpp  (+19 more)
doc/: CMakeLists.txt  Makefile.am  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index.cvlog  index.docbook  index.html  index.nif  index.sgml
icons/: CMakeLists.txt
pics/: CMakeLists.txt  Makefile.am  crsc-app-ktron.svgz
po/ar/: ksnakeduel.po
po/ast/: ksnakeduel.po
po/bg/: ksnakeduel.po
po/bs/: ksnakeduel.po
po/ca/: ksnakeduel.po
po/ca/docs/ksnakeduel/: index.docbook
po/ca@valencia/: ksnakeduel.po
po/cs/: ksnakeduel.po
po/da/: ksnakeduel.po
po/de/: ksnakeduel.po
po/de/docs/ksnakeduel/: index.docbook
po/el/: ksnakeduel.po
po/en_GB/: ksnakeduel.po
po/eo/: ksnakeduel.po
po/es/: ksnakeduel.po
po/es/docs/ksnakeduel/: index.docbook
po/et/: ksnakeduel.po
po/et/docs/ksnakeduel/: index.docbook
po/eu/: ksnakeduel.po
po/fi/: ksnakeduel.po
po/fr/: ksnakeduel.po
po/fr/docs/ksnakeduel/: index.docbook
po/ga/: ksnakeduel.po
po/gl/: ksnakeduel.po
po/he/: ksnakeduel.po
po/hi/: ksnakeduel.po
po/hr/: ksnakeduel.po
po/hsb/: ksnakeduel.po
po/hu/: ksnakeduel.po
po/ia/: ksnakeduel.po
po/is/: ksnakeduel.po
po/it/: ksnakeduel.po
po/it/docs/ksnakeduel/: index.docbook
po/ja/: ksnakeduel.po
po/ka/: ksnakeduel.po
po/kk/: ksnakeduel.po
po/km/: ksnakeduel.po
po/ko/: ksnakeduel.po
po/lt/: ksnakeduel.po
po/lv/: ksnakeduel.po
po/mai/: ksnakeduel.po
po/ml/: ksnakeduel.po
po/mr/: ksnakeduel.po
po/ms/: ksnakeduel.po
po/nb/: ksnakeduel.po
po/nds/: ksnakeduel.po
po/nl/: ksnakeduel.po
po/nl/docs/ksnakeduel/: index.docbook
po/nn/: ksnakeduel.po
po/pl/: ksnakeduel.po
po/pt/: ksnakeduel.po
po/pt/docs/ksnakeduel/: index.docbook
po/pt_BR/: ksnakeduel.po
po/pt_BR/docs/ksnakeduel/: index.docbook
po/ro/: ksnakeduel.po
po/ru/: ksnakeduel.po
po/sa/: ksnakeduel.po
po/sk/: ksnakeduel.po
po/sl/: ksnakeduel.po
po/sq/: ksnakeduel.po
po/sr/: ksnakeduel.po
po/sr@ijekavian/: ksnakeduel.po
po/sr@ijekavianlatin/: ksnakeduel.po
po/sr@latin/: ksnakeduel.po
po/sv/: ksnakeduel.po
po/sv/docs/ksnakeduel/: index.docbook
po/tr/: ksnakeduel.po
po/ug/: ksnakeduel.po
po/uk/: ksnakeduel.po
po/uk/docs/ksnakeduel/: index.docbook
po/zh_CN/: ksnakeduel.po
po/zh_TW/: ksnakeduel.po
src/: CMakeLists.txt  general.ui  intelligence.cpp  intelligence.h  ksnakeduel.kcfg  ksnakeduel.knsrc  ksnakeduel.qrc  ktron.cpp  ktron.h  main.cpp  obstacle.cpp  obstacle.h  org.kde.ksnakeduel.appdata.xml  org.kde.ksnakeduel.desktop  player.cpp  player.h  playfield.cpp  playfield.h  renderer.cpp  renderer.h  settings.kcfgc  snakepart.cpp  tron.cpp  tron.h
themes/: CMakeLists.txt  default.desktop  default.svgz  neon.desktop
