####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = index-1.html index-2.html index-3.html index-4.html index.html logotp3.gif index-5.html index.sgml 

install-data-local:
	$(mkinstalldirs) $(kde_htmldir)/en/ktron/
	$(INSTALL_DATA) index-1.html $(kde_htmldir)/en/ktron/index-1.html
	$(mkinstalldirs) $(kde_htmldir)/en/ktron/
	$(INSTALL_DATA) index-2.html $(kde_htmldir)/en/ktron/index-2.html
	$(mkinstalldirs) $(kde_htmldir)/en/ktron/
	$(INSTALL_DATA) index-3.html $(kde_htmldir)/en/ktron/index-3.html
	$(mkinstalldirs) $(kde_htmldir)/en/ktron/
	$(INSTALL_DATA) index-4.html $(kde_htmldir)/en/ktron/index-4.html
	$(mkinstalldirs) $(kde_htmldir)/en/ktron/
	$(INSTALL_DATA) index.html $(kde_htmldir)/en/ktron/index.html
	$(mkinstalldirs) $(kde_htmldir)/en/ktron/
	$(INSTALL_DATA) logotp3.gif $(kde_htmldir)/en/ktron/logotp3.gif
	$(mkinstalldirs) $(kde_htmldir)/en/ktron/
	$(INSTALL_DATA) index-5.html $(kde_htmldir)/en/ktron/index-5.html

uninstall-local:
	-rm -f $(kde_htmldir)/en/ktron/index-1.html
	-rm -f $(kde_htmldir)/en/ktron/index-2.html
	-rm -f $(kde_htmldir)/en/ktron/index-3.html
	-rm -f $(kde_htmldir)/en/ktron/index-4.html
	-rm -f $(kde_htmldir)/en/ktron/index.html
	-rm -f $(kde_htmldir)/en/ktron/logotp3.gif
	-rm -f $(kde_htmldir)/en/ktron/index-5.html

####### kdevelop will overwrite this part!!! (end)############
